# Cache

./: CMakeLists.txt  tst_Cache.c  tst_Cache_RAND
Cache_Project/: FIFO_strategy.c  FIFO_strategy.h  LRU_strategy.c  Makefile  Makefile.plots  NUR_strategy.c  cache.c  cache_list.c  cache_list.h  low_cache.c  low_cache.h  tst_Cache.c
